<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Book Store v2</string>
    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!-- Label for overflow menu option that calls the supplier with an intent [CHAR LIMIT=20] -->
    <string name="action_call_supplier">Call supplier</string>
    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Stock</string>
    <!-- Label for Sell Button on list_item view -->
    <string name="sell_one_button">Sell One</string>
    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>
    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Book Name</string>
    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>
    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">0</string>
    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>
    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="label_book_in_stock">" in stock"</string>
    <!-- Label for Retail Price for summary textview -->
    <string name="label_rrp">RRP: $</string>
    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Contact Name</string>
    <!-- Text hint for supplier phone field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Phone</string>
    <!-- Label for supplier category of seller details in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>
    <!-- Label for Order button in the editor [CHAR LIMIT=30] -->
    <string name="order_button">Call supplier</string>
    <!-- Label for editor menu option to save entry and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <!-- Title text for the empty view, which describes the empty library image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Your inventory is empty</string>
    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- Dialog message to ask the user to confirm deleting all pets [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Are you sure you want to delete ALL books?</string>
    <!-- Toast message to inform the user that all items are deleted [CHAR LIMIT=NONE] -->
    <string name="delete_all_success">All items in your database are deleted</string>
    <!-- Toast message to inform the user that deleting all books has failed [CHAR LIMIT=NONE] -->
    <string name="delete_all_failed">Error with deleting books</string>
    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a Book</string>
    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>
    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">"Error with updating book\nAll fields are required"</string>
    <!-- Toast message in editor when current book has failed to be added [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error adding new book, please complete all fields</string>
    <!-- Toast message in editor when current book was successfully added [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">New book saved</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>
    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>
    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <!-- Toast message in editor and list when current book has zero stock [CHAR LIMIT=NONE] -->
    <string name="out_of_stock">Out of stock</string>
    <!-- Toast message in editor when there is no number set and Call Supplier is clicked [CHAR LIMIT=NONE] -->
    <string name="no_number">Phone number missing</string>
</resources>
